[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for TradingAgents multi-agent analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TradingAgents Team"}
]
keywords = ["mcp", "trading", "ai", "agents", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tradingagents-mcp = "mcp_server.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/tradingagents-mcp-server"
Documentation = "https://github.com/yourusername/tradingagents-mcp-server#readme"
Repository = "https://github.com/yourusername/tradingagents-mcp-server"
Issues = "https://github.com/yourusername/tradingagents-mcp-server/issues"

[tool.setuptools]
packages = ["mcp_server"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
